[package]
name = "velocitas-fix"
version = "0.1.0"
edition = "2021"
description = "High-performance FIX protocol engine for institutional trading"
license = "MIT"

[features]
aeron = []
default = ["aeron"]
dpdk = []
openonload = []
kernel-tcp = []
tls = ["dep:rustls"]
simd-avx2 = []
simd-neon = []

[dependencies]
rustls = { version = "0.23", optional = true }
memmap2 = "0.9"
crossbeam-utils = "0.8"
hdrhistogram = "7.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.4"
quickcheck = "1.0"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "parse_benchmark"
harness = false

[[bench]]
name = "serialize_benchmark"
harness = false

[[bench]]
name = "throughput_benchmark"
harness = false

[[bench]]
name = "session_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
